--- a/12.0/Dockerfile
+++ b/12.0/Dockerfile
@@ -69,8 +69,8 @@ RUN echo "deb http://deb.nodesource.com/node_8.x stretch main" > /etc/apt/source
 
 # Install Odoo
 ENV ODOO_VERSION 12.0
-ARG ODOO_RELEASE=latest
-#ARG ODOO_SHA=5c07ed019be6158129e974eced0ee26967b8767f
+ARG ODOO_RELEASE=20221012
+ARG ODOO_SHA=42bd57808208d7c572b6476beac890322dc8959f
 RUN curl -o odoo.deb -sSL http://nightly.odoo.com/${ODOO_VERSION}/nightly/deb/odoo_${ODOO_VERSION}.${ODOO_RELEASE}_all.deb \
     #        && echo "${ODOO_SHA} odoo.deb" | sha1sum -c - \
     && apt-get update \
